msm: HTC: add LPM attribute module

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -435,7 +435,7 @@ obj-$(CONFIG_MACH_VIGOR) += board-vigor.o mdm.o
 obj-$(CONFIG_MACH_VIGOR) += board-vigor-audio.o
 obj-$(CONFIG_MACH_VIGOR) += board-vigor-keypad.o
 obj-$(CONFIG_MACH_VIGOR) += htc_bdaddress.o htc_sleep_clk.o board-vigor-rfkill.o htc_fmtx_rfkill.o htc_util.o
-obj-$(CONFIG_MACH_VIGOR) += board-vigor-mmc.o board-vigor-wifi.o
+obj-$(CONFIG_MACH_VIGOR) += board-vigor-mmc.o board-vigor-wifi.o htc_lpm.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby.o mdm.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby-audio.o
 obj-$(CONFIG_MACH_RUBY) += board-ruby-keypad.o
